--- a/package.json
+++ b/package.json
@@ -4,18 +4,32 @@
   "description": "",
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --devtool eval --progress --colors --hot",
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p",
-    "qa": "flow"
+    "build": "rm -rf dist && cross-env NODE_ENV=production ./node_modules/.bin/webpack --progress -p",
+    "test": "eslint src/js && flow && rm -rf coverage && jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "jest": {
+    "transform": {
+      ".*": "babel-jest"
+    },
+    "unmockedModulePathPatterns": [
+      "react",
+      "react-dom",
+      "fbjs"
+    ],
+    "testPathIgnorePatterns": [
+      "src/js/__tests__/Wrap.js"
+    ]
+  },
   "devDependencies": {
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.2.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
@@ -26,7 +40,7 @@
     "css-loader": "^0.28.4",
     "empty": "^0.10.1",
     "eslint": "^4.3.0",
-    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-config-airbnb-base": "^11.3.2",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^7.1.0",
@@ -41,6 +55,7 @@
     "pug-html-loader": "^1.1.0",
     "pug-loader": "^2.3.0",
     "react": "^15.4.2",
+    "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0-beta.7",
     "sass-loader": "^6.0.6",
